--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "GymPass style app.",
   "main": "index.js",
   "scripts": {
-   "start:dev": "tsx watch src/server.ts",
-   "start": "node build/server.js",
-   "build": "tsup src --out-dir build"
+    "start:dev": "tsx watch src/server.ts",
+    "start": "node build/server.js",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.15.7",
-    "tsup": "^6.7.0",
-    "tsx": "^3.12.6",
-    "typescript": "^5.0.2"
+    "@types/node": "18.15.7",
+    "tsup": "6.7.0",
+    "tsx": "3.12.6",
+    "typescript": "5.0.2"
   },
   "dependencies": {
-    "fastify": "^4.15.0"
+    "fastify": "4.15.0"
   }
 }
