chore: implementando JWT no fastify

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
+# Ambient light
 NODE_ENV=dev
+
+# Authentication
+JWT_SECRET=ignitenode03
+
+# Database configuration
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+
